<resources>
    <string name="app_name">Leaf disease classification</string>
    <string name="logout">Log out</string>
    <string name="delete">Delete Item</string>
    <string name="card_name_placeholder">Card name here</string>
    <string name="card_code_placeholder">Card code here</string>
    <string name="scanned_image_placeholder">Scanned image</string>
    <string name="disease_name_placeholder">Disease name</string>
    <string name="accuracy_placeholder">Accuracy</string>
    <string name="disease_description_placeholder">Disease description</string>
    <string name="treatment_title">Treatment</string>
    <string name="conventional_treatment">Conventional</string>
    <string name="organic_treatment">Organic</string>
    <string name="bio_treatment">Bio</string>
    <string name="capture_button_alt">Capture</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="register_confirm_pass_hint">Confirm password</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="continue_as_guest">Continue as guest</string>

    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.example.fileprovider</string>
    <string name="historyCardTitle">History</string>
    <string name="historyCardDescr">View your scan history and rate treatments</string>
    <string name="exploreCardTitle">Explore</string>
    <string name="cardExploreDescr">Learn about diseases without the need of scanning</string>
    <string name="save_to_history_button">Save to history</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuLogin">Login</string>
    <string name="menuRegister">Register</string>
    <string name="login_hint">Login</string>
    <string name="register_hint">Register</string>
    <string name="forgot_password_hint">Forgot password</string>
</resources>