<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="8dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="?attr/colorOnSurface"
        android:text="Login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="20dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editTextEmail"
          style="@style/modifiedEditText"
          android:hint="@string/login_email_hint"
          android:inputType="textEmailAddress"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="20dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editTextPassword"
          style="@style/modifiedEditText"
          android:hint="@string/login_password_hint"
          android:inputType="textPassword"
          android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/loginButton"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="Login" />

    <TextView
        android:id="@+id/textViewRegister"
        style="@style/parent"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:text="@string/login_signup_hint"
        android:textAlignment="textEnd"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textViewGuest"
        style="@style/parent"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/continue_as_guest"
        android:textAlignment="textEnd"
        android:textStyle="bold" />

  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>